--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,6 +163,8 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge.BP_Froge
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT.BP_Pursuer_BT
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy.BP_MortarEnemy
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion.BP_Explosion
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1276,6 +1278,21 @@ PhysicalMaterial.Advanced=True
 PhysicalMaterial.Destruction=True
 PhysicalMaterial.PhysicalProperties=True
 BP_Froge_C.MaterialParameters=True
+BP_Pursuer_BT_C.SkeletalMesh=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1374,26 +1391,26 @@ AssetDialog.CurrentViewType=1
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/PM_Froge_NoBounce
-MRUItem1=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Services/BTService_GetChaseTargetLocation
-MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT
-MRUItem3=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy
-MRUItem4=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarProjectile
-MRUItem5=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BT_AI
-MRUItem6=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetPatrolLocation
-MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_MovetoPatrolPoint
-MRUItem8=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge
-MRUItem9=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BT_Froge
-MRUItem10=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem12=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BBD_Froge
-MRUItem13=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_ChasePlayer
-MRUItem14=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetChaseLocation
-MRUItem15=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_GetPatrolLocation
-MRUItem16=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_AI_Controller
-MRUItem17=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Pursuer_AIController_BT
-MRUItem18=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/FrogBlacks
-MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/FrogBody
+MRUItem0=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion
+MRUItem1=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy
+MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/PM_Froge_NoBounce
+MRUItem3=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Services/BTService_GetChaseTargetLocation
+MRUItem4=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT
+MRUItem5=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarProjectile
+MRUItem6=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BT_AI
+MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetPatrolLocation
+MRUItem8=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_MovetoPatrolPoint
+MRUItem9=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge
+MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BT_Froge
+MRUItem11=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem13=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BBD_Froge
+MRUItem14=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_ChasePlayer
+MRUItem15=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetChaseLocation
+MRUItem16=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_GetPatrolLocation
+MRUItem17=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_AI_Controller
+MRUItem18=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Pursuer_AIController_BT
+MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/FrogBlacks
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1522,7 +1539,7 @@ TreeViewWidth=0.300000
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Progress.BorderPadding\" "
 Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
-Object="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
+Object="\"Object.Collision.BodyInstance\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" "
@@ -1534,15 +1551,15 @@ UserWidget="\"Object.Layout.Slot\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+BoxComponent="\"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 WBP_HP_bar_C="\"Object.Layout.Slot\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1557,9 +1574,11 @@ EdGraphNode=
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
 BP_MortarProjectile_C=
-BP_Froge_C=
-Character=
-Pawn=
+BP_Froge_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_Pursuer_BT_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_LearningKit_PlayerCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
@@ -2662,7 +2681,7 @@ StaticMesh=StaticMesh.ImportSettings.Mesh
 MeshNaniteSettings=
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Pursuer_C=BP_Pursuer_C.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 PawnSensingComponent=BP_Pursuer_C.Physics.ConstraintsGroup
 CapsuleComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 NiagaraActor=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
@@ -2675,10 +2694,10 @@ K2Node_CallFunction=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physic
 K2Node_VariableGet=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 K2Node_VariableSet=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
-BP_Pursuer_BT_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+BP_Pursuer_BT_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 K2Node=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
 Emitter=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
-BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 AIPerceptionStimuliSourceComponent=BP_Pursuer_C.Physics.ConstraintsGroup
 BTT_GetChaseLocation_C=BP_Pursuer_C.Physics.ConstraintsGroup
 BTService_GetChaseTargetLocation_C=BP_Pursuer_C.Physics.ConstraintsGroup
@@ -2701,6 +2720,7 @@ BTT_MovetoPatrolPoint_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Ph
 K2Node_MacroInstance=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
 PhysicsSpringComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
 K2Node_FunctionEntry=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+BoxComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2969,7 +2989,7 @@ SkeletalMeshComponent.Physics=True
 CapsuleComponent.Physics=True
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge.BP_Froge;
